URL/CLIENTS/5.161.95.22/URL/README.md
# STIR/SHAKEN Certificate Repository Compliance

## 5.161.95.22

| Code | Source | Instances |
|------|--------|-----------|
| [e_atis_cache_header](../ISSUES/e_atis_cache_header/README.md) | ATIS-1000074 | 1 |
| [w_atis_protocol](../ISSUES/w_atis_protocol/README.md) | ATIS-1000080 | 1 |
| [w_atis_content_type](../ISSUES/w_atis_content_type/README.md) | ATIS-1000080 | 1 |

### http://5.161.95.22/191c4c42dd7fa6115e84100637e42c99.cer

| Code | Status | Source | Details |
|------|--------|--------|---------|
| w_atis_content_type | warn | ATIS-1000080 | HTTP response should contain Content-Type header and it's value should be application/pem-certificate-chain |
| e_atis_cache_header | error | ATIS-1000074 | The STI-VS shall implement the cache behavior. The Cache-Control header is missed |
| w_atis_protocol | warn | ATIS-1000080 | The verifier should not dereference any protocol other than https or a port other than 443 or 8443 |


Generated: 27/10/2022 at 21:42:12